--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
   <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   <init-param>
    <param-name>contextConfigLocation</param-name>
-   <param-value>/META-INF/spring/application-context.xml</param-value>
+   <param-value>classpath:/META-INF/spring/application-context.xml</param-value>
   </init-param>
   <load-on-startup>1</load-on-startup>
  </servlet>
